restructures html and css, adds all resume text, also adds icons

--- a/index.html
+++ b/index.html
@@ -1,112 +1,227 @@
 <html>
-    <head>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/styles.css" type='text/css'>
-    </head>
-    <body>
-       <div class="grid"> 
-           <div id="intro" class="box a">
-            <img src="img/profile.JPG" alt="profilepic" class="profile"/>
-            
-            <h1>Pelin</h1>
-            <h2 class="surname">YUZBASIOGLU VAN GOSSUM</h2>
-            <br>
-            <p class="about">self motivated, passionate for programming</p>
-            <br>
-            <p class="social" href="https://www.linkedin.com/in/pelin-yuzbasioglu-096581b8/" > Linkedin</p>
-            <p class="social">Instagram</p>
-            <p class="social">Facebook</p>
-            <br>
-            <p class="blackp">Heverlee <br>
-            pelin.yuzbasi@gmail.com <br>
-            0484 08 58 83</p>
-        </div>
-        <div id="skills" class="box b">
-            <h3 class="heading">Skills</h3>
-            <p>Online courses on codeacademy:</p>
-            <ul>
-                <li>Finished HTML & CSS courses on codecademy.com (Current course: Javascript)</li>
-                <li>Microsoft office (word, excel, powerpoint, outlook, onenote</li>
-                <li>Agile and eager learner</li>
-            </ul>
-            <p>Language:</p>
-            <ul>
-                <li>Dutch:</li>
-                <li>English:</li>
-                <li>Turkish:</li>
-            </ul>
-        </div>
-        <div id="education" class="box c">
-            <h3 class="heading">Education</h3>
-        <p><b>KULeuven</b>, Leuven, Belgium — <i>Master’s Degree, Tourism</i>
-        </p>
-        <p class="text">I did this master in Dutch, although there were courses in English.
-                <i>Thesis:</i> The socio-cultural impacts of tourism on the local women of Pamukkale
-                <i>Activities and Societies:</i> Volunteered at the Pangaea cafe for international students of KULeuven
-                </p>
-        <p><b>ILT - Leuven Language Institute,</b> Leuven, Belgium — <i>Dutch Advanced Knowledge 2, B2 CEFR)</i> </p>
-        <p><b>DEÜ</b>, Izmir, Turkey — <i>Bachelor’s Degree, Tourism Management</i>
-        </p>
-        <p class="text"><i>Activities and Societies:</i> Business Club 
-            (A club that organized trips to companies and institutions to learn 
-            their management techniques and experiences)</p> 
 
-        <p><b>Laurea UAS</b>, Helsinki, Finland — <i>Hospitality Management</i>
-        </p>
-        <p class="text">During my study at Laurea I had innovation and team focussed courses 
-        such as creative teams, developing service innovations and event manegement</p>
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css" type='text/css'>
+</head>
 
-        <p><b>Muharrem Hasbi Lisesi</b>, Secundary school, <i>Math and Literature</i> 
-        </p>
-        <p class="text"> <i>Activities and Societies:</i> I participated to school choir during my study. It thought me working with a team 
-            and that the the result with a team is greater than individual work.</p>
+<body>
+    <div class="grid">
+        <div id="intro" class="box white">
+            <img id="profile-picture" src="img/profile.JPG" alt="Profile picture" />
+            <h1 id="name">Pelin</h1>
+            <h2 id="surname">YUZBASIOGLU VAN GOSSUM</h2>
+            <p id="about">
+                Welcome to my website!
+                I am a Turkish expat, living in Belgium.
+                Currently, I learn programming in order to make a career change.
+                I am a self motivated person and passionate for programming.
+            </p>
+            <p>
+                <ul id="social-media">
+                    <li><a href="https://www.linkedin.com/in/pelin-yuzbasioglu-096581b8/" target="_blank"><i
+                                class="fab fa-linkedin"></i></a></li>
+                    <li><a href="https://www.instagram.com/pelinyvg/" target="_blank"><i
+                                class="fab fa-instagram"></i></a></li>   
+                    <li><a href="https://www.facebook.com/profile.php?id=1055820260" target="_blank"><i
+                                class="fab fa-facebook"></i></a></li>
+                    <li><a href="https://twitter.com/pelin_05" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                </ul>
+            </p>
+        <br>
+        
+            <p id="address">
+                Heverlee <br>
+                pelin.yuzbasi@gmail.com <br>
+                0484 08 58 83
+            </p>
         </div>
-        <div id="experience" class="box d">
-            <h3 class="headingb">Experience</h3>
-            <p class="blackp">Municipailty of Rotselaar, Administrative Coordinator</p>
-            <p class="textb">In Rotselaar I manage the HR administration and aid with internal affairs. 
-                I also deal with the administration 
+        <div id="skills" class="box black">
+            <h1>Skills</h1>
+            <p>Online courses on codeacademy:
+                <ul>
+                    <li>Finished HTML & CSS courses on codecademy.com (Current course: Javascript)</li>
+                    <li>Microsoft office (Word, Excel, Powerpoint, Outlook, OneNote</li>
+                    <li>Agile and eager learner</li>
+                </ul>
+            </p>
+            <p>Language:
+                <ul>
+                    <li>Dutch:</li>
+                    <li>English:</li>
+                    <li>Turkish:</li>
+                </ul>
+            </p>
+        </div>
+
+        <div id="education" class="box black">
+            <h1>Education</h1>
+            <h2>
+                <span class="institution">KULeuven</span>,
+                <span class="location">Leuven, Belgium</span> —
+                <span class="degree">Master’s Degree, Tourism</span>
+            </h2>
+            <p class="description-text">
+                I did this master in Dutch, although there were courses in English.
+                <ul>
+                    <li><i>Thesis:</i> The socio-cultural impacts of tourism on the local women of Pamukkale</li>
+                    <li><i>Activities and Societies:</i> Volunteered at the Pangaea cafe for international students of
+                        KULeuven</li>
+                </ul>
+            </p>
+            <h2>
+                <span class="institution">ILT - Leuven Language Institute</span>,
+                <span class="location">Leuven, Belgium</span> —
+                <span class="degree">Dutch Advanced Knowledge 2, B2 CEFR)</span>
+            </h2>
+            <h2>
+                <span class="institution">DEÜ</span>,
+                <span class="location">Izmir, Turkey</span> —
+                <span class="degree">Bachelor’s Degree, Tourism Management</span>
+            </h2>
+            <p class="description-text">
+                <ul>
+                    <li><i>Activities and Societies:</i> Business Club
+                        (A club that organized trips to companies and institutions to learn
+                        their management techniques and experiences)
+                    </li>
+                </ul>
+            </p>
+
+            <h2>
+                <span class="institution">Laurea UAS</span>,
+                <span class="location">Helsinki, Finland</span> —
+                <span class="degree">Hospitality Management</span>
+            </h2>
+            <p class="description-text">
+                During my study at Laurea I had innovation and team focussed courses
+                such as creative teams, developing service innovations and event manegement
+            </p>
+            <h2>
+                <span class="institution">Muharrem Hasbi Lisesi</span>,
+                <span class="location">Secundary school</span> —
+                <span class="degree">Math and Literature</span>
+            </h2>
+            <p class="description-text">
+                <ul>
+                    <li> <i>Activities and Societies:</i> I participated to school choir during my study. It thought me
+                        working with a team and that the the result with a team is greater than individual work.
+                    </li>
+                </ul>
+            </p>
+        </div>
+
+        <div id="experience" class="box black">
+            <h1>Experience</h1>
+
+            <h2>
+                <span class="institution">Municipailty of Rotselaar</span>,
+                <span class="location">Rotselaar, Belgium</span> —
+                <span class="degree">Administrative Coordinator</span>
+            </h2>
+            <span class="year">September 2017 - Present</span>
+            <p class="description-text">
+                In Rotselaar I manage the HR administration and aid with internal affairs.
+                I also deal with the administration
                 for the local economy (liquor and fire safety licenses).
-                    I do occasional projects in relation with the local economy. 
-                    For example, I coordinated the hanging of flags in all the sub municipalities of 
-                    Rotselaar. The purpose of this project was to make the town centers more attractive and 
-                    to boost the local economy. I was specifically responsible for the public tender and the 
-                    technical execution.
-                    </p>
-                <p class="blackp">Administrative Officer at Kuehne + Nagel, June - August 2017 (interim)</p>
-            <p class="textb">Outgoing invoice administration</p>
-            <p class="blackp">Administration Supervisor at O'Learys Belgium, November 2016 - March 2017</p>
-            <p class="textb">HR administration, managing the cash registers and accounting (incoming invoices)</p>
-            <p class="blackp"><b>Other:</b></p>
-            <p class="smalltext">
-            <b>Student Job at Park Inn by Radisson BLU, 2014 - 2016</b> <br>
-            <i>Waitressing in the restaurant and setting up conference rooms for meetings</i> 
-            <br>
-            <i>Housekeeping Supervisor - cleaning rooms and scheduling housekeeping staff.</i>
-            <br>
-            <b>Public Relations Assistant at İzmir Fair, January - February 2013</b>
-            <br>
-            <i>Guest relations and booking hotels for guests of the fair.</i>
-            <br>
-            <b>Guest Relations at Corinthia Hotels in Antalya, June - August 2011</b>
+                I do occasional projects in relation with the local economy.
+                For example, I coordinated the hanging of flags in all the sub municipalities of
+                Rotselaar. The purpose of this project was to make the town centers more attractive and
+                to boost the local economy. I was specifically responsible for the public tender and the
+                technical execution.
+            </p>
+            <h2>
+                <span class="institution">Kuehne + Nagel</span>,
+                <span class="location">Rotselaar, Belgium</span> —
+                <span class="degree">Administrative Officer</span>
+            </h2>
+            <span class="year">June - August 2017 (interim)</span>
+            <p class="description-text">Outgoing invoice administration</p>
 
-2016 - Housekeeping Supervisor, cleaning rooms and scheduling housekeeping staff.
-Public Relations Assistant at İzmir Fair, January - February 2013
-Guest relations and booking hotels for guests of the fair.
-Guest Relations at Corinthia Hotels in Antalya, June - August 2011
-Dealing with hotel guests in person, making sure they were having a pleasant stay. 
-If guests had a problem or need, I dealt with it. 
-I was in charge of restaurant reservations as well.</p>
+            <h2>
+                <span class="institution">O'Learys</span>,
+                <span class="location">Gent, Belgium</span> —
+                <span class="degree">Administration Supervisor</span>
+            </h2>
+            <span class="year">November 2016 - March 2017</span>
+            <p class="description-text">
+                HR administration, managing the cash registers and accounting (incoming invoices)
+            </p>
+
+            <div id="other">
+                <h2>Other:</h2>
+                <p>
+                    <h3>
+                        <span class="institution">Park Inn by Radisson BLU</span>,
+                        <span class="location">Leuven, Belgium</span> —
+                        <span class="degree">Waitress, Dishwasher, Housekeeping Supervisor</span>
+                    </h3>
+                    <span class="year">2014 - 2016</span>
+                    <p>
+                        <ul>
+                            <li>
+                                Waitressing in the restaurant and setting up conference rooms for meetings
+                            </li>
+                            <li>
+                                Housekeeping Supervisor - cleaning rooms and scheduling housekeeping staff.
+                            </li>
+                        </ul>
+                    </p>
+                    <h3>
+                        <span class="institution">IZFAS (İzmir Fair Services Culture and Art Affairs)</span>,
+                        <span class="location">Izmir, Turkey</span> —
+                        <span class="degree">Public Relations Assistant</span>
+                    </h3>
+                    <span class="year">January - February 2013</span>
+                    <p>
+                        <ul>
+                            <li>
+                                Guest relations and booking hotels for guests of the fair.
+                            </li>
+                        </ul>
+                    </p>
+                    <h3>
+                        <span class="institution">Corinthia Hotel</span>,
+                        <span class="location">Antalya, Turkey</span> —
+                        <span class="degree">Internship, Guest Relations Officer</span>
+                    </h3>
+                    <span class="year">June - August 2011</span>
+                    <p>
+                        <ul>
+                            <li>Dealing with hotel guests in person, making sure they were having a pleasant stay.</li>
+                            <li>Making restaurant reservations.</li>
+                        </ul>
+                    </p>
+                    <h3>
+                        <span class="institution">Greenland Hotel</span>,
+                        <span class="location">Fethiye, Turkey</span> —
+                        <span class="degree">Waitress&bartender</span>
+                    </h3>
+                    <span class="year">June - September 2010</span>
+                    <p>
+                        <ul>
+                            <li>Waitressing at the restaurant and the bar</li>
+                        </ul>
+                    </p>
+
+            </div>
 
         </div>
-        <div id="hobbies" class="box e">
-            <h3 class="headingb">Hobbies</h3>
-            <img src="img/hobby.jpg" alt="hobby" width="300px" height="350px" class="hobby"/>
-            <p class="blackp">Cycling and running <br> Travelling <br> Reading <br> Computer gaming </p>
-            <p>Travelling</p>
-            <p>Reading</p>
-            <p>Computer gaming</p>
+        <div id="hobbies" class="box black">
+            <h1>Hobbies</h1>
+            <img src="img/hobby.jpg" alt="hobby" width="300px" height="350px" class="hobby" />
+            <h2>Cycling and running</h2>
+            <p>once in a while participating short races</p>
+            <h2>Travelling</h2>
+            <h2>Reading</h2>
+            <p>History, World and Turkish Classics</p>
+            <h2>Computer Gaming</h2>
+            <p class="description-text">League of Legends, Minecraft, Civilization VI</p>
         </div>
     </div>
-    </body>
+</body>
+
 </html>
