finalized version of my resume

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
                     <li><a href="https://www.linkedin.com/in/pelin-yuzbasioglu-096581b8/" target="_blank"><i
                                 class="fab fa-linkedin"></i></a></li>
                     <li><a href="https://www.instagram.com/pelinyvg/" target="_blank"><i
-                                class="fab fa-instagram"></i></a></li>   
+                                class="fab fa-instagram"></i></a></li>
                     <li><a href="https://www.facebook.com/profile.php?id=1055820260" target="_blank"><i
                                 class="fab fa-facebook"></i></a></li>
                     <li><a href="https://twitter.com/pelin_05" target="_blank"><i class="fab fa-twitter"></i></a></li>
                 </ul>
             </p>
-        <br>
-        
+            <br>
+
             <p id="address">
                 Heverlee <br>
                 pelin.yuzbasi@gmail.com <br>
@@ -41,18 +41,23 @@
         </div>
         <div id="skills" class="box black">
             <h1>Skills</h1>
-            <p>Online courses on codeacademy:
+            <p>
+                Online courses on codeacademy:
                 <ul>
                     <li>Finished HTML & CSS courses on codecademy.com (Current course: Javascript)</li>
                     <li>Microsoft office (Word, Excel, Powerpoint, Outlook, OneNote</li>
                     <li>Agile and eager learner</li>
                 </ul>
             </p>
-            <p>Language:
-                <ul>
-                    <li>Dutch:</li>
-                    <li>English:</li>
-                    <li>Turkish:</li>
+            <p>
+                Language:
+                <ul id="language-rating">
+                    <li><span class="language">Dutch:</span> <i class="fas fa-circle"></i><i class="fas fa-circle"></i><i class="fas fa-circle"></i><i
+                            class="fas fa-circle"></i><i class="far fa-circle"></i></li>
+                    <li><span class="language">English:</span> <i class="fas fa-circle"></i><i class="fas fa-circle"></i><i
+                            class="fas fa-circle"></i><i class="fas fa-circle"></i><i class="far fa-circle"></i></i>
+                    </li>
+                    <li><span class="language">Turkish:</span><i class="fas fa-circle"></i><i class="fas fa-circle"></i><i class="fas fa-circle"></i><i class="fas fa-circle"></i><i class="fas fa-circle"></i></li>
                 </ul>
             </p>
         </div>
@@ -212,7 +217,7 @@
         </div>
         <div id="hobbies" class="box black">
             <h1>Hobbies</h1>
-            <img src="img/hobby.jpg" alt="hobby" width="300px" height="350px" class="hobby" />
+            <div id="hobby-picture"></div>
             <h2>Cycling and running</h2>
             <p>once in a while participating short races</p>
             <h2>Travelling</h2>
