Fixes some spelling errors and other minor problems.

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <p id="about">
                 Welcome to my website!
                 I am a Turkish expat, living in Belgium.
-                Currently, I learn programming in order to make a career change.
-                I am a self motivated person and passionate for programming.
+                Currently, I'm learning programming in order to make a career change.
+                I am motivated about learning new skills and passionate for programming.
             </p>
             <p>
                 <ul id="social-media">
@@ -36,21 +36,21 @@
             <p id="address">
                 Heverlee <br>
                 pelin.yuzbasi@gmail.com <br>
-                0484 08 58 83
             </p>
         </div>
         <div id="skills" class="box black">
-            <h1>Skills</h1>
+            <h1>Programming Skills</h1>
             <p>
-                Online courses on codeacademy:
                 <ul>
-                    <li>Finished HTML & CSS courses on codecademy.com (Current course: Javascript)</li>
-                    <li>Microsoft office (Word, Excel, Powerpoint, Outlook, OneNote</li>
-                    <li>Agile and eager learner</li>
+                    <li>Currently following a course on Javascript</li>
+                    <li>Finished HTML & CSS courses on codecademy.com</li>
                 </ul>
+                <p>
+                    In order to setup this website, I also learned some basics about git and GitHub.
+                </p>
             </p>
+            <h1>Languages</h1>
             <p>
-                Language:
                 <ul id="language-rating">
                     <li><span class="language">Dutch:</span> <i class="fas fa-circle"></i><i class="fas fa-circle"></i><i class="fas fa-circle"></i><i
                             class="fas fa-circle"></i><i class="far fa-circle"></i></li>
@@ -103,7 +103,7 @@
             </h2>
             <p class="description-text">
                 During my study at Laurea I had innovation and team focussed courses
-                such as creative teams, developing service innovations and event manegement
+                such as creative teams, developing service innovations and event management
             </p>
             <h2>
                 <span class="institution">Muharrem Hasbi Lisesi</span>,
@@ -112,7 +112,7 @@
             </h2>
             <p class="description-text">
                 <ul>
-                    <li> <i>Activities and Societies:</i> I participated to school choir during my study. It thought me
+                    <li> <i>Activities and Societies:</i> I participated in the school choir during my studies. It taught me about
                         working with a team and that the the result with a team is greater than individual work.
                     </li>
                 </ul>
@@ -168,7 +168,7 @@
                     <p>
                         <ul>
                             <li>
-                                Waitressing in the restaurant and setting up conference rooms for meetings
+                                Waitressing at the restaurant and setting up conference rooms for meetings
                             </li>
                             <li>
                                 Housekeeping Supervisor - cleaning rooms and scheduling housekeeping staff.
