--- a/index.html
+++ b/index.html
@@ -15,50 +15,51 @@
             <h1 id="name">Pelin</h1>
             <h2 id="surname">YUZBASIOGLU VAN GOSSUM</h2>
             <p id="about">
-                Welcome to my website!
-                I am a Turkish expat, living in Belgium.
-                Currently, I'm learning programming in order to make a career change.
+                I am a Turkish expat, living in Belgium since 2013.
+                Currently, I'm learning Java and related technologies to become a software developer.
                 I am motivated about learning new skills and passionate for programming.
             </p>
             <p>
-                <ul id="social-media">
-                    <li><a href="https://www.linkedin.com/in/pelin-yuzbasioglu-096581b8/" target="_blank"><i
-                                class="fab fa-linkedin"></i></a></li>
-                    <li><a href="https://www.instagram.com/pelinyvg/" target="_blank"><i
-                                class="fab fa-instagram"></i></a></li>
-                    <li><a href="https://www.facebook.com/profile.php?id=1055820260" target="_blank"><i
-                                class="fab fa-facebook"></i></a></li>
-                    <li><a href="https://twitter.com/pelin_05" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                </ul>
+            <ul id="social-media">
+                <li><a href="https://www.linkedin.com/in/pelin-yuzbasioglu-096581b8/" target="_blank"><i
+                            class="fab fa-linkedin"></i></a></li>
+                <li><a href="https://www.instagram.com/pelinyvg/" target="_blank"><i class="fab fa-instagram"></i></a>
+                </li>
+                <li><a href="https://www.facebook.com/profile.php?id=1055820260" target="_blank"><i
+                            class="fab fa-facebook"></i></a></li>
+                <li><a href="https://twitter.com/pelin_05" target="_blank"><i class="fab fa-twitter"></i></a></li>
+            </ul>
             </p>
             <br>
 
             <p id="address">
-                Heverlee <br>
+                3001 Heverlee <br>
                 pelin.yuzbasi@gmail.com <br>
             </p>
         </div>
         <div id="skills" class="box black">
             <h1>Programming Skills</h1>
             <p>
+            <ul>
+                <li>Currently enrolled on a Java course organized by Cevora and VDAB</li>
                 <ul>
-                    <li>Currently following a course on Javascript</li>
-                    <li>Finished HTML & CSS courses on codecademy.com</li>
+                    <li><b>Syllabus:</b> Java EE, JUnit, Maven, Spring, JDBC, JPA, Hibernate, MySql, Servlet, Angular,
+                        JavaScript, HTML, CSS, Git, Bootstrap, Scrum</li>
                 </ul>
-                <p>
-                    In order to setup this website, I also learned some basics about git and GitHub.
-                </p>
+                <li>Certificate: Scrum and Data Analysis</li>
+            </ul>
             </p>
             <h1>Languages</h1>
             <p>
-                <ul id="language-rating">
-                    <li><span class="language">Dutch:</span> <i class="fas fa-circle"></i><i class="fas fa-circle"></i><i class="fas fa-circle"></i><i
-                            class="fas fa-circle"></i><i class="far fa-circle"></i></li>
-                    <li><span class="language">English:</span> <i class="fas fa-circle"></i><i class="fas fa-circle"></i><i
-                            class="fas fa-circle"></i><i class="fas fa-circle"></i><i class="far fa-circle"></i></i>
-                    </li>
-                    <li><span class="language">Turkish:</span><i class="fas fa-circle"></i><i class="fas fa-circle"></i><i class="fas fa-circle"></i><i class="fas fa-circle"></i><i class="fas fa-circle"></i></li>
-                </ul>
+            <ul id="language-rating">
+                <li><span class="language">Dutch:</span> <i class="fas fa-circle"></i><i class="fas fa-circle"></i><i
+                        class="fas fa-circle"></i><i class="fas fa-circle"></i><i class="far fa-circle"></i></li>
+                <li><span class="language">English:</span> <i class="fas fa-circle"></i><i class="fas fa-circle"></i><i
+                        class="fas fa-circle"></i><i class="fas fa-circle"></i><i class="far fa-circle"></i></i>
+                </li>
+                <li><span class="language">Turkish:</span><i class="fas fa-circle"></i><i class="fas fa-circle"></i><i
+                        class="fas fa-circle"></i><i class="fas fa-circle"></i><i class="fas fa-circle"></i></li>
+            </ul>
             </p>
         </div>
 
@@ -70,12 +71,14 @@
                 <span class="degree">Master’s Degree, Tourism</span>
             </h2>
             <p class="description-text">
-                I did this master in Dutch, although there were courses in English.
-                <ul>
-                    <li><i>Thesis:</i> The socio-cultural impacts of tourism on the local women of Pamukkale</li>
-                    <li><i>Activities and Societies:</i> Volunteered at the Pangaea cafe for international students of
-                        KULeuven</li>
-                </ul>
+                Most of the courses were in Dutch.
+            <ul>
+                <li class="description-text"><i>Thesis:</i> The socio-cultural impacts of tourism on the local women of
+                    Pamukkale</li>
+                <li class="description-text"><i>Activities and Societies:</i> Volunteered at the Pangaea cafe for
+                    international students of
+                    KULeuven</li>
+            </ul>
             </p>
             <h2>
                 <span class="institution">ILT - Leuven Language Institute</span>,
@@ -88,12 +91,12 @@
                 <span class="degree">Bachelor’s Degree, Tourism Management</span>
             </h2>
             <p class="description-text">
-                <ul>
-                    <li><i>Activities and Societies:</i> Business Club
-                        (A club that organized trips to companies and institutions to learn
-                        their management techniques and experiences)
-                    </li>
-                </ul>
+            <ul>
+                <li class="description-text"><i>Activities and Societies:</i> Business Club
+                    (A club that organized trips to companies and institutions to learn
+                    their management techniques and experiences)
+                </li>
+            </ul>
             </p>
 
             <h2>
@@ -111,11 +114,13 @@
                 <span class="degree">Math and Literature</span>
             </h2>
             <p class="description-text">
-                <ul>
-                    <li> <i>Activities and Societies:</i> I participated in the school choir during my studies. It taught me about
-                        working with a team and that the the result with a team is greater than individual work.
-                    </li>
-                </ul>
+            <ul>
+                <li class="description-text"> <i>Activities and Societies:</i> I participated in the school choir during
+                    my studies. It taught me
+                    about
+                    working with a team and that the the result with a team is greater than individual work.
+                </li>
+            </ul>
             </p>
         </div>
 
@@ -123,20 +128,21 @@
             <h1>Experience</h1>
 
             <h2>
+                <span class="institution">Praktijkpunt Landbouw Vlaams-Brabant vzw</span>,
+                <span class="location">Herent, Belgium</span> —
+                <span class="degree">Administrative Officer</span>
+            </h2>
+            <span class="year">Oktober 2019 - January 2020 (Interim)</span>
+            <p class="description-text">
+            </p>
+
+            <h2>
                 <span class="institution">Municipailty of Rotselaar</span>,
                 <span class="location">Rotselaar, Belgium</span> —
                 <span class="degree">Administrative Coordinator</span>
             </h2>
-            <span class="year">September 2017 - Present</span>
+            <span class="year">September 2017 - August 2019</span>
             <p class="description-text">
-                In Rotselaar I manage the HR administration and aid with internal affairs.
-                I also deal with the administration
-                for the local economy (liquor and fire safety licenses).
-                I do occasional projects in relation with the local economy.
-                For example, I coordinated the hanging of flags in all the sub municipalities of
-                Rotselaar. The purpose of this project was to make the town centers more attractive and
-                to boost the local economy. I was specifically responsible for the public tender and the
-                technical execution.
             </p>
             <h2>
                 <span class="institution">Kuehne + Nagel</span>,
@@ -144,7 +150,7 @@
                 <span class="degree">Administrative Officer</span>
             </h2>
             <span class="year">June - August 2017 (interim)</span>
-            <p class="description-text">Outgoing invoice administration</p>
+            <p class="description-text"></p>
 
             <h2>
                 <span class="institution">O'Learys</span>,
@@ -153,64 +159,43 @@
             </h2>
             <span class="year">November 2016 - March 2017</span>
             <p class="description-text">
-                HR administration, managing the cash registers and accounting (incoming invoices)
             </p>
 
             <div id="other">
-                <h2>Other:</h2>
+                <h2>Other (studentjobs, internship):</h2>
                 <p>
-                    <h3>
-                        <span class="institution">Park Inn by Radisson BLU</span>,
-                        <span class="location">Leuven, Belgium</span> —
-                        <span class="degree">Waitress, Dishwasher, Housekeeping Supervisor</span>
-                    </h3>
-                    <span class="year">2014 - 2016</span>
-                    <p>
-                        <ul>
-                            <li>
-                                Waitressing at the restaurant and setting up conference rooms for meetings
-                            </li>
-                            <li>
-                                Housekeeping Supervisor - cleaning rooms and scheduling housekeeping staff.
-                            </li>
-                        </ul>
-                    </p>
-                    <h3>
-                        <span class="institution">IZFAS (İzmir Fair Services Culture and Art Affairs)</span>,
-                        <span class="location">Izmir, Turkey</span> —
-                        <span class="degree">Public Relations Assistant</span>
-                    </h3>
-                    <span class="year">January - February 2013</span>
-                    <p>
-                        <ul>
-                            <li>
-                                Guest relations and booking hotels for guests of the fair.
-                            </li>
-                        </ul>
-                    </p>
-                    <h3>
-                        <span class="institution">Corinthia Hotel</span>,
-                        <span class="location">Antalya, Turkey</span> —
-                        <span class="degree">Internship, Guest Relations Officer</span>
-                    </h3>
-                    <span class="year">June - August 2011</span>
-                    <p>
-                        <ul>
-                            <li>Dealing with hotel guests in person, making sure they were having a pleasant stay.</li>
-                            <li>Making restaurant reservations.</li>
-                        </ul>
-                    </p>
-                    <h3>
-                        <span class="institution">Greenland Hotel</span>,
-                        <span class="location">Fethiye, Turkey</span> —
-                        <span class="degree">Waitress&bartender</span>
-                    </h3>
-                    <span class="year">June - September 2010</span>
-                    <p>
-                        <ul>
-                            <li>Waitressing at the restaurant and the bar</li>
-                        </ul>
-                    </p>
+                <h3>
+                    <span class="institution">Park Inn by Radisson BLU</span>,
+                    <span class="location">Leuven, Belgium</span> —
+                    <span class="degree">Waitress, Dishwasher, Housekeeping Supervisor</span>
+                </h3>
+                <span class="year">2014 - 2016</span>
+                <p>
+                </p>
+                <h3>
+                    <span class="institution">IZFAS (İzmir Fair Services Culture and Art Affairs)</span>,
+                    <span class="location">Izmir, Turkey</span> —
+                    <span class="degree">Public Relations Assistant</span>
+                </h3>
+                <span class="year">January - February 2013</span>
+                <p>
+                </p>
+                <h3>
+                    <span class="institution">Corinthia Hotel</span>,
+                    <span class="location">Antalya, Turkey</span> —
+                    <span class="degree">Internship, Guest Relations Officer</span>
+                </h3>
+                <span class="year">June - August 2011</span>
+                <p>
+                </p>
+                <h3>
+                    <span class="institution">Greenland Hotel</span>,
+                    <span class="location">Fethiye, Turkey</span> —
+                    <span class="degree">Waitress&bartender</span>
+                </h3>
+                <span class="year">June - September 2010</span>
+                <p>
+                </p>
 
             </div>
         </div>
@@ -218,10 +203,10 @@
             <h1>Hobbies</h1>
             <div id="hobby-picture"></div>
             <h2>Cycling and running</h2>
-            <p>once in a while participating short races</p>
+            <p class="description-text">once in a while participating short races</p>
             <h2>Travelling</h2>
             <h2>Reading</h2>
-            <p>History, World and Turkish Classics</p>
+            <p class="description-text">History, World and Turkish Classics</p>
             <h2>Computer Gaming</h2>
             <p class="description-text">League of Legends, Minecraft, Civilization VI</p>
         </div>
