--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                 <span class="degree">Bachelor’s Degree, Tourism Management</span>
             </h2>
             <p class="description-text">
+                The courses were in English.
             <ul>
                 <li class="description-text"><i>Activities and Societies:</i> Business Club
                     (A club that organized trips to companies and institutions to learn
@@ -116,9 +117,8 @@
             <p class="description-text">
             <ul>
                 <li class="description-text"> <i>Activities and Societies:</i> I participated in the school choir during
-                    my studies. It taught me
-                    about
-                    working with a team and that the the result with a team is greater than individual work.
+                    my studies. It taught me quite a lot about working with a team and that sometimes the result with a
+                    teamwork is greater than the result of an individual work.
                 </li>
             </ul>
             </p>
